matroskademux: put streamheaders on vorbis/speex/flac/theora caps to make remuxing work

https://bugzilla.gnome.org/show_bug.cgi?id=640589